# EMRG

./: .gitignore  LICENSE  README.md  STRESS_TEST_INSIGHTS.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
benchmarks/: HISTORICAL_RESULTS.md  README.md  circuits.py  run_benchmark.py  score_results.py  search_policy.py
benchmarks/policies/: default-v050.json  default-v051.json
docs/: README.md  frontends.md
docs/examples/: bell_state.py  bell_state.qasm  ghz_state.py  ghz_state.qasm  simple_vqe.py  simple_vqe.qasm
docs/tutorials/: qaoa_maxcut_mitigation.ipynb  vqe_h2_mitigation.ipynb
src/emrg/: __init__.py  _version.py  analyzer.py  cli.py  codegen.py  frontends.py  heuristics.py  policy.py  preview.py
tests/: _helpers.py  conftest.py  stress_test.py  stress_test_preview.py  test_analyzer.py  test_benchmarks.py  test_cdr.py  test_cli.py  test_codegen.py  test_frontends.py  test_heuristics.py  test_init.py  test_multifrontend_analyzer.py  test_multifrontend_generate.py  test_multifrontend_preview.py  test_optional_frontend_checker.py  test_optional_frontends.py  test_optional_frontends_real.py  test_policy.py  test_policy_integration.py  test_preview.py  test_real_circuits.py  test_tutorial_notebooks.py
tools/: check_optional_frontends.py
