[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "emrg"
dynamic = ["version"]
description = "Automatic quantum error mitigation recipe generator for NISQ circuits"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Fedor Shind", email = "Shindyalov@proton.me" },
]
keywords = [
    "quantum-computing",
    "error-mitigation",
    "zne",
    "nisq",
    "qiskit",
    "mitiq",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "qiskit>=1.0",
    "mitiq>=0.48",
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]
preview = [
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[project.scripts]
emrg = "emrg.cli:main"

[project.urls]
Homepage = "https://github.com/FedorShind/EMRG"
Repository = "https://github.com/FedorShind/EMRG"
Issues = "https://github.com/FedorShind/EMRG/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "emrg._version.__version__"}

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
